--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,10 @@
 	<title></title>
 </head>
 <body>
-<h1><div style="text-align:center"><font color='blue'>PREDICCION USANDO ALGORITMOS DE CLASIFICCION</font></div></h1>
+<h1><div style="text-align:center"><font color='blue'>PREDICCIÓN USANDO ALGORITMOS DE CLASIFICACIÓN</font></div></h1>
 <hr>
 </br>
-<h2><div style="text-align:center;">ingresa los valores</div></h2>
+<h2><div style="text-align:center;">INGRESAR VALORES</div></h2>
 </br>
 
 
